--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/portfolio/css/layout.css">
+  <link rel="stylesheet" href="/css/layout.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
@@ -16,10 +16,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>이민주 포트폴리오</title>
-	<script src="/portfolio/script/jquery-1.12.3.js"></script>
-  <script src="/portfolio/script/script.js"></script>
+	<script src="/script/jquery-1.12.3.js"></script>
+  <script src="/script/script.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-  <script src="/portfolio/script/jquery.counterup.min.js"></script>
+  <script src="/script/jquery.counterup.min.js"></script>
 </head>
 <body>
   <div id="wrap">
