--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <h4 class="num">01</h4>
           <div class="project_cont" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-easing="ease-in-out">
             <figure>
-              <img src="/portfolio/images/main/img_project01.png" alt="광양시청">
+              <img src="/images/main/img_project01.png" alt="광양시청">
             </figure>
             <div class="project_desc">
               <div>
@@ -178,7 +178,7 @@
                 <P>광양시청 메인페이지를 리뉴얼한 개인 프로젝트입니다.</P>
               </div>
               <div class="project_btn">
-                <a href="/portfolio/page/sub01.html" class="port_button">작업 과정 보기</a>
+                <a href="/page/sub01.html" class="port_button">작업 과정 보기</a>
                 <a class="port_button" target="_blank" href="http://leemj.dothome.co.kr/gwangyang">사이트 바로가기</a>
               </div>
             </div>
@@ -188,7 +188,7 @@
           <h4 class="num">02</h4>
           <div class="project_cont" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-easing="ease-in-out">
             <figure>
-              <img src="/portfolio/images/main/img_project03.png" alt="고성노벨컨트리클럽">
+              <img src="/images/main/img_project03.png" alt="고성노벨컨트리클럽">
             </figure>
             <div class="project_desc">
               <div>
@@ -196,7 +196,7 @@
                 <P>고성노벨컨트리클럽 메인페이지를 리뉴얼한 개인 프로젝트입니다.</P>
               </div>
               <div class="project_btn">
-                <a class="port_button" href="/portfolio/page/sub03.html">작업 과정 보기</a>
+                <a class="port_button" href="/page/sub03.html">작업 과정 보기</a>
                 <a class="port_button" target="_blank" href="http://leemj.dothome.co.kr/novel_cc">사이트 바로가기</a>
               </div>
             </div>
@@ -206,7 +206,7 @@
           <h4 class="num">03</h4>
           <div class="project_cont" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-easing="ease-in-out">
             <figure>
-              <img src="/portfolio/images/main/img_project02.png" alt="티엔에스">
+              <img src="/images/main/img_project02.png" alt="티엔에스">
             </figure>
             <div class="project_desc">
               <div>
@@ -214,7 +214,7 @@
                 <P>그누보드를 사용한 쇼핑몰 형태의 홈페이지 제작 프로젝트입니다.</P>
               </div>
               <div class="project_btn">
-                <a href="/portfolio/page/sub02.html" class="port_button">작업 과정 보기</a>
+                <a href="/page/sub02.html" class="port_button">작업 과정 보기</a>
                 <a class="port_button" target="_blank" href="http://mjturbotec.ai-sw.net ">사이트 바로가기</a>
               </div>
             </div>
@@ -224,7 +224,7 @@
           <h4 class="num">04</h4>
           <div class="project_cont" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-easing="ease-in-out">
             <figure>
-              <img src="/portfolio/images/main/img_project04.png" alt="한국팽이건설">
+              <img src="/images/main/img_project04.png" alt="한국팽이건설">
             </figure>
             <div class="project_desc">
               <div>
@@ -232,7 +232,7 @@
                 <P>그누보드를 사용해 기존 홈페이지를 리뉴얼한 반응형 사이트입니다.</P>
               </div>
               <div class="project_btn">
-                <a href="/portfolio/page/sub05.html" class="port_button">작업 과정 보기</a>
+                <a href="/page/sub05.html" class="port_button">작업 과정 보기</a>
                 <a class="port_button" target="_blank" href="http://topbase.ai-sw.net/ ">사이트 바로가기</a>
               </div>
             </div>
@@ -242,7 +242,7 @@
           <h4 class="num">05</h5>
           <div class="project_cont" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-easing="ease-in-out">
             <figure>
-              <img src="/portfolio/images/main/img_project05.png" alt="iclc">
+              <img src="/images/main/img_project05.png" alt="iclc">
             </figure>
             <div class="project_desc">
               <div>
@@ -260,7 +260,7 @@
           <h4 class="num">06</h5>
           <div class="project_cont" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-easing="ease-in-out">
             <figure>
-              <img src="/portfolio/images/main/img_project06.png" alt="모바일 스탬프 투어">
+              <img src="/images/main/img_project06.png" alt="모바일 스탬프 투어">
             </figure>
             <div class="project_desc">
               <div>
@@ -268,7 +268,7 @@
                 <P>그누보드를 사용한 하이브리드앱 디자인, 퍼블리싱 작업입니다.</P>
               </div>
               <div class="project_btn">
-                <a class="port_button" href="/portfolio/page/sub04.html">작업 과정 보기</a>
+                <a class="port_button" href="/page/sub04.html">작업 과정 보기</a>
                 <a class="port_button" target="_blank" href="http://sitggroup.ai-sw.net/">사이트 바로가기</a>
               </div>
             </div>
