--- a/index.html
+++ b/index.html
@@ -4,35 +4,44 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/layout.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>이민주 포트폴리오</title>
-	<script src="/script/jquery-1.12.3.js"></script>
+
+  <!-- css -->
+  <link rel="stylesheet" href="/css/layout.css">
+
+  <!-- gsap -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+
+  <!-- script -->
   <script src="/script/script.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-  <script src="/script/jquery.counterup.min.js"></script>
+
+  <!-- fonts -->
+  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif+KR:wght@200;300;400;500;600;700;900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
   <div id="wrap">
     <!-- header -->
     <header id="header">
-      <div class="header_wrap">
-        <h1><a href="/portfolio/index.html">MINJU</a></h1>
+      <div class="header_wrap inner">
+        <h1>
+          <a href="/portfolio/index.html">
+            <img src="/images/logo.png" alt="이민주 포트폴리오">
+          </a>
+        </h1>
         <nav class="nav">
           <ul class="gnb">
-            <li><a href="#main">Main</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#main" class="upper playfair">home</a></li>
+            <li><a href="#about" class="upper playfair">about</a></li>
+            <li><a href="#skill" class="upper playfair">skill</a></li>
+            <li><a href="#work" class="upper playfair">work</a></li>
+            <li><a href="#contact" class="upper playfair">contact</a></li>
           </ul>
         </nav>
       </div>
@@ -40,15 +49,11 @@
     <div id="container">
       <!-- main -->
       <section id="main">
-        <h2>
-          <span class="typing-txt">안녕하세요:)</span>
-          <span class="typing"></span>
-          <strong>소통하며 발전하는 <br> 퍼블리셔 이민주입니다.</strong>
-        </h2>
-        <a href="#about" class="scroll">
-          <span class="mouse"></span>
-          <span class="scroll_down">Scroll Down</span>
-        </a>
+        <div class="container inner">
+          <p class="text poppins upper">welcome<span>welcome</span></p>
+          <p class="text playfair upper">to minju’s<span>to minju’s</span></p>
+          <p class="text poppins upper">portfolio<span>portfolio</span></p>
+        </div>
       </section>
       <!-- about -->
       <section id="about" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="50" data-aos-easing="ease-in-out"
@@ -157,62 +162,20 @@
           </div>
         </div>
       </section>
-      <script>
-        $('.counter').counterUp({
-            delay: 10,
-            time: 1000
-        });
-      </script>
       <!-- portfolio -->
       <section id="portfolio" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-easing="ease-in-out">
-        <h3>Portfolio</h3>
-        <article class="project active">
-          <h4 class="num">04</h4>
-          <div class="project_cont" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-easing="ease-in-out">
-            <figure>
-              <img src="/images/main/img_project04.png" alt="한국팽이건설">
-            </figure>
-            <div class="project_desc">
-              <div>
-                <h5>한국팽이건설</h5>
-                <P>그누보드를 사용해 기존 홈페이지를 리뉴얼한 반응형 사이트입니다.</P>
-              </div>
-              <div class="project_btn">
-                <a href="/page/sub05.html" class="port_button">작업 과정 보기</a>
-                <a class="port_button" target="_blank" href="http://topbase.ai-sw.net/ ">사이트 바로가기</a>
-              </div>
-            </div>
-          </div>
-        </article>
+        
       </section>
       <!-- contact -->
       <section id="contact">
-        <div class="contact_area">
-          <h3>함께 나누고 싶은 이야기가 있으신가요?</h3>
-          <div>
-            <a href="mailto:manju0504@naver.com">manju0504@naver.com</a>
-            
-          </div>
-        </div>
       </section>
     </div>
     <!-- footer -->
     <footer id="footer">
-      <!-- wave footer -->
-      <div class="waves">
-        <div class="wave" id="wave1"></div>
-        <div class="wave" id="wave2"></div>
-        <div class="wave" id="wave3"></div>
-        <div class="wave" id="wave4"></div>
-      </div>
       <!-- copyright -->
       <p class="thank">Thank you for visitiong my page ♥</p>
       <p class="copyright">Copyright &#169; 2022 Lee Min-Ju</p>
     </footer>
   </div>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
 </body>
 </html>
