--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>이민주 포트폴리오</title>
 
-  <!-- css -->
-  <link rel="stylesheet" href="/css/layout.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <!-- gsap -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
-
-  <!-- script -->
-  <script src="/script/script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollToPlugin.min.js"></script>
 
   <!-- fonts -->
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
@@ -23,6 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif+KR:wght@200;300;400;500;600;700;900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="/css/layout.css">
 </head>
 
 <body>
@@ -50,9 +48,16 @@
       <!-- main -->
       <section id="main">
         <div class="container inner">
-          <p class="text poppins upper">welcome<span>welcome</span></p>
-          <p class="text playfair upper">to minju’s<span>to minju’s</span></p>
-          <p class="text poppins upper">portfolio<span>portfolio</span></p>
+          <p class="text poppins upper">welcome!<span>welcome!</span></p>
+          <p class="text poppins upper">thank you for<span>thank you for</span></p>
+          <p class="text playfair upper">visitiong minju’s<span>visitiong minju’s</span></p>
+          <p class="text poppins upper">portfolio site<span>portfolio site</span></p>
+          <p class="text poppins upper">I hope you like it!<span>I hope you like it!</span></p>
+        </div>
+        <div class="scroll">
+          <p class="scroll_inner">
+            <span></span>
+          </p>
         </div>
       </section>
       <!-- about -->
@@ -177,5 +182,6 @@
       <p class="copyright">Copyright &#169; 2022 Lee Min-Ju</p>
     </footer>
   </div>
+  <script src="/script/script.js"></script>
 </body>
 </html>
