--- a/index.html
+++ b/index.html
@@ -198,6 +198,25 @@
         <article class="port_wrap">
           <ul class="port_list" data-aos="fade-up">
             <li class="port">
+              <a href="https://kg.ac.kr/" target="_blank">
+                <div class="list_img">
+                  <img src="/images/main/port_img14.png" alt="">
+                </div>
+                <div class="list_txt">
+                  <p class="top">
+                    <span class="blue bold">반응형 웹</span>
+                    <span class="gray">디자인, 퍼블리싱 80%</span>
+                  </p>
+                  <p class="bot tit bold">
+                    한국골프과학기술대학교
+                    <span class="scroll_inner">
+                      <span></span>
+                    </span>
+                  </p>
+                </div>
+              </a>
+            </li>
+            <li class="port">
               <a href="https://shipang.kr/" target="_blank">
                 <div class="list_img">
                   <img src="/images/main/port_img13.png" alt="">
