--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <meta name="description" content="이민주 웹 퍼블리셔 포트폴리오 사이트입니다.">
+  <meta property="og:type" content="website"> 
+  <meta property="og:title" content="이민주 포트폴리오">
+  <meta property="og:description" content="이민주 웹 퍼블리셔 포트폴리오 사이트입니다.">
+  <meta property="og:url" content="https://jua-lee.github.io/">
   <meta name="google-site-verification" content="6-yJkCBFqetsyyPc2mpdC548NzNverijevPQd4KR6DA" />
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
